--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -14,4 +14,6 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       - run: pytest tests
+        env:
+          PYTHONPATH: .
 
